diesel_compile_tests/tests/fail/invalid_joins.stderr
error[E0271]: type mismatch resolving `<Once as Plus<Once>>::Output == Once`
   --> tests/fail/invalid_joins.rs:41:37
    |
 LL |     let _ = users::table.inner_join(posts::table.inner_join(users::table));
    |                          ---------- ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `Once`, found `MoreThanOnce`
    |                          |
    |                          required by a bound introduced by this call
    |
note: required for `users::columns::id` to implement `AppearsOnTable<Join<table, SelectStatement<FromClause<...>>, ...>>`
   --> tests/fail/invalid_joins.rs:7:9
    |
  LL |         id -> Integer,
    |         ^^
    = note: associated types for the current `impl` cannot be restricted in `where` clauses
    = note: 2 redundant requirements hidden
    = note: required for `((id, name), SkipSelectableExpressionBoundCheckWrapper<(..., ...)>)` to implement `AppearsOnTable<Join<table, SelectStatement<FromClause<...>>, ...>>`
    = note: required for `Join<table, SelectStatement<FromClause<JoinOn<..., ...>>>, ...>` to implement `QuerySource`
    = note: 1 redundant requirement hidden
    = note: required for `JoinOn<Join<table, SelectStatement<FromClause<...>>, ...>, ...>` to implement `QuerySource`
    = note: required for `SelectStatement<FromClause<users::table>>` to implement `InternalJoinDsl<SelectStatement<FromClause<...>>, ..., ...>`
    = note: 1 redundant requirement hidden
    = note: required for `users::table` to implement `InternalJoinDsl<SelectStatement<FromClause<...>>, ..., ...>`
    = note: required for `users::table` to implement `JoinWithImplicitOnClause<SelectStatement<FromClause<...>>, ...>`
note: required by a bound in `inner_join`
   --> DIESEL/diesel/diesel/src/query_dsl/mod.rs
    |
LL |     fn inner_join<Rhs>(self, rhs: Rhs) -> InnerJoin<Self, Rhs>
    |        ---------- required by a bound in this associated function
LL |     where
LL |         Self: JoinWithImplicitOnClause<Rhs, joins::Inner>,
    |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `QueryDsl::inner_join`
 
        = note: this error originates in the macro `table` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0271]: type mismatch resolving `<Join<table, ..., ...> as AppearsInFromClause<...>>::Count == Once`
  --> tests/fail/invalid_joins.rs:41:26
   |
LL |     let _ = users::table.inner_join(posts::table.inner_join(users::table));
   |                          ^^^^^^^^^^ expected `Once`, found `MoreThanOnce`
   |
note: required for `users::columns::id` to implement `AppearsOnTable<Join<table, SelectStatement<FromClause<...>>, ...>>`
  --> tests/fail/invalid_joins.rs:7:9
   |
 LL |         id -> Integer,
   |         ^^
   = note: associated types for the current `impl` cannot be restricted in `where` clauses
   = note: 3 redundant requirements hidden
   = note: required for `Grouped<Eq<Nullable<user_id>, Nullable<id>>>` to implement `AppearsOnTable<Join<table, SelectStatement<FromClause<...>>, ...>>`
   = note: required for `JoinOn<Join<table, SelectStatement<FromClause<...>>, ...>, ...>` to implement `QuerySource`
   = note: required for `SelectStatement<FromClause<users::table>>` to implement `InternalJoinDsl<SelectStatement<FromClause<...>>, ..., ...>`

      = note: this error originates in the macro `table` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0271]: type mismatch resolving `<Once as Plus<Once>>::Output == Once`
   --> tests/fail/invalid_joins.rs:47:21
    |
 LL |         .inner_join(posts::table.inner_join(users::table.on(posts::user_id.eq(users::id))));
    |          ---------- ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `Once`, found `MoreThanOnce`
    |          |
    |          required by a bound introduced by this call
    |
note: required for `users::columns::id` to implement `AppearsOnTable<Join<table, SelectStatement<FromClause<...>>, ...>>`
   --> tests/fail/invalid_joins.rs:7:9
    |
  LL |         id -> Integer,
    |         ^^
    = note: associated types for the current `impl` cannot be restricted in `where` clauses
    = note: 2 redundant requirements hidden
    = note: required for `((id, name), SkipSelectableExpressionBoundCheckWrapper<(..., ...)>)` to implement `AppearsOnTable<Join<table, SelectStatement<FromClause<...>>, ...>>`
    = note: required for `Join<table, SelectStatement<FromClause<JoinOn<..., ...>>>, ...>` to implement `QuerySource`
    = note: 1 redundant requirement hidden
    = note: required for `JoinOn<Join<table, SelectStatement<FromClause<...>>, ...>, ...>` to implement `QuerySource`
    = note: required for `SelectStatement<FromClause<users::table>>` to implement `InternalJoinDsl<SelectStatement<FromClause<...>>, ..., ...>`
    = note: 1 redundant requirement hidden
    = note: required for `users::table` to implement `InternalJoinDsl<SelectStatement<FromClause<...>>, ..., ...>`
    = note: required for `users::table` to implement `JoinWithImplicitOnClause<SelectStatement<FromClause<...>>, ...>`
note: required by a bound in `inner_join`
   --> DIESEL/diesel/diesel/src/query_dsl/mod.rs
    |
LL |     fn inner_join<Rhs>(self, rhs: Rhs) -> InnerJoin<Self, Rhs>
    |        ---------- required by a bound in this associated function
LL |     where
LL |         Self: JoinWithImplicitOnClause<Rhs, joins::Inner>,
    |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `QueryDsl::inner_join`
 
        = note: this error originates in the macro `table` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0271]: type mismatch resolving `<Join<table, ..., ...> as AppearsInFromClause<...>>::Count == Once`
  --> tests/fail/invalid_joins.rs:47:10
   |
LL |         .inner_join(posts::table.inner_join(users::table.on(posts::user_id.eq(users::id))));
   |          ^^^^^^^^^^ expected `Once`, found `MoreThanOnce`
   |
note: required for `users::columns::id` to implement `AppearsOnTable<Join<table, SelectStatement<FromClause<...>>, ...>>`
  --> tests/fail/invalid_joins.rs:7:9
   |
 LL |         id -> Integer,
   |         ^^
   = note: associated types for the current `impl` cannot be restricted in `where` clauses
   = note: 3 redundant requirements hidden
   = note: required for `Grouped<Eq<Nullable<user_id>, Nullable<id>>>` to implement `AppearsOnTable<Join<table, SelectStatement<FromClause<...>>, ...>>`
   = note: required for `JoinOn<Join<table, SelectStatement<FromClause<...>>, ...>, ...>` to implement `QuerySource`
   = note: required for `SelectStatement<FromClause<users::table>>` to implement `InternalJoinDsl<SelectStatement<FromClause<...>>, ..., ...>`

      = note: this error originates in the macro `table` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0271]: type mismatch resolving `<Once as Plus<Once>>::Output == Once`
   --> tests/fail/invalid_joins.rs:54:9
    |
 LL |       let _ = users::table.inner_join(
    |                            ---------- required by a bound introduced by this call
 LL |
 LL | /         posts::table
 LL | |             .on(users::id.eq(posts::user_id))
 LL | |             .inner_join(users::table),
    | |_____________________________________^ expected `Once`, found `MoreThanOnce`
    |
note: required for `users::columns::id` to implement `AppearsOnTable<Join<table, SelectStatement<FromClause<...>>, ...>>`
   --> tests/fail/invalid_joins.rs:7:9
    |
  LL |         id -> Integer,
    |         ^^
    = note: associated types for the current `impl` cannot be restricted in `where` clauses
    = note: 2 redundant requirements hidden
    = note: required for `((id, name), SkipSelectableExpressionBoundCheckWrapper<(..., ...)>)` to implement `AppearsOnTable<Join<table, SelectStatement<FromClause<...>>, ...>>`
    = note: required for `Join<table, SelectStatement<FromClause<JoinOn<..., ...>>>, ...>` to implement `QuerySource`
    = note: 1 redundant requirement hidden
    = note: required for `JoinOn<Join<table, SelectStatement<FromClause<...>>, ...>, ...>` to implement `QuerySource`
    = note: required for `SelectStatement<FromClause<users::table>>` to implement `InternalJoinDsl<SelectStatement<FromClause<...>>, ..., ...>`
    = note: 1 redundant requirement hidden
    = note: required for `users::table` to implement `InternalJoinDsl<SelectStatement<FromClause<...>>, ..., ...>`
    = note: required for `users::table` to implement `JoinWithImplicitOnClause<OnClauseWrapper<..., ...>, ...>`
note: required by a bound in `inner_join`
   --> DIESEL/diesel/diesel/src/query_dsl/mod.rs
    |
LL |     fn inner_join<Rhs>(self, rhs: Rhs) -> InnerJoin<Self, Rhs>
    |        ---------- required by a bound in this associated function
LL |     where
LL |         Self: JoinWithImplicitOnClause<Rhs, joins::Inner>,
    |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `QueryDsl::inner_join`
 
        = note: this error originates in the macro `table` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0271]: type mismatch resolving `<Join<table, ..., ...> as AppearsInFromClause<...>>::Count == Once`
  --> tests/fail/invalid_joins.rs:52:26
   |
LL |     let _ = users::table.inner_join(
   |                          ^^^^^^^^^^ expected `Once`, found `MoreThanOnce`
   |
note: required for `users::columns::id` to implement `AppearsOnTable<Join<table, SelectStatement<FromClause<...>>, ...>>`
  --> tests/fail/invalid_joins.rs:7:9
   |
 LL |         id -> Integer,
   |         ^^
   = note: associated types for the current `impl` cannot be restricted in `where` clauses
   = note: 2 redundant requirements hidden
   = note: required for `Grouped<Eq<id, user_id>>` to implement `AppearsOnTable<Join<table, SelectStatement<FromClause<...>>, ...>>`
   = note: required for `JoinOn<Join<table, SelectStatement<FromClause<...>>, ...>, ...>` to implement `QuerySource`
   = note: required for `SelectStatement<FromClause<users::table>>` to implement `InternalJoinDsl<SelectStatement<FromClause<...>>, ..., ...>`

      = note: this error originates in the macro `table` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0271]: type mismatch resolving `<Once as Plus<Once>>::Output == Once`
   --> tests/fail/invalid_joins.rs:63:21
    |
 LL |         .inner_join(posts::table.inner_join(comments::table));
    |          ---------- ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `Once`, found `MoreThanOnce`
    |          |
    |          required by a bound introduced by this call
    |
note: required for `comments::columns::id` to implement `AppearsOnTable<Join<JoinOn<Join<table, table, Inner>, ...>, ..., ...>>`
   --> tests/fail/invalid_joins.rs:22:9
    |
 LL |         id -> Integer,
    |         ^^
    = note: associated types for the current `impl` cannot be restricted in `where` clauses
    = note: 2 redundant requirements hidden
    = note: required for `((id, name), (id, user_id, post_id, name), ...)` to implement `AppearsOnTable<Join<JoinOn<Join<table, table, Inner>, ...>, ..., ...>>`
    = note: required for `Join<JoinOn<Join<table, table, Inner>, Grouped<...>>, ..., ...>` to implement `QuerySource`
    = note: 1 redundant requirement hidden
    = note: required for `JoinOn<Join<JoinOn<Join<table, table, Inner>, ...>, ..., ...>, ...>` to implement `QuerySource`
    = note: required for `SelectStatement<FromClause<JoinOn<Join<table, table, Inner>, ...>>>` to implement `InternalJoinDsl<SelectStatement<FromClause<...>>, ..., ...>`
    = note: required for `SelectStatement<FromClause<JoinOn<Join<table, table, Inner>, ...>>>` to implement `JoinWithImplicitOnClause<SelectStatement<FromClause<...>>, ...>`
note: required by a bound in `inner_join`
   --> DIESEL/diesel/diesel/src/query_dsl/mod.rs
    |
LL |     fn inner_join<Rhs>(self, rhs: Rhs) -> InnerJoin<Self, Rhs>
    |        ---------- required by a bound in this associated function
LL |     where
LL |         Self: JoinWithImplicitOnClause<Rhs, joins::Inner>,
    |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `QueryDsl::inner_join`
 
        = note: this error originates in the macro `table` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0271]: type mismatch resolving `<Once as Plus<Once>>::Output == Once`
   --> tests/fail/invalid_joins.rs:72:36
    |
 LL |     let _ = users::table.left_join(posts::table.left_join(users::table));
    |                          --------- ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `Once`, found `MoreThanOnce`
    |                          |
    |                          required by a bound introduced by this call
    |
note: required for `users::columns::id` to implement `AppearsOnTable<Join<table, SelectStatement<FromClause<...>>, ...>>`
   --> tests/fail/invalid_joins.rs:7:9
    |
  LL |         id -> Integer,
    |         ^^
    = note: associated types for the current `impl` cannot be restricted in `where` clauses
    = note: 2 redundant requirements hidden
    = note: required for `((id, name), Nullable<SkipSelectableExpressionBoundCheckWrapper<...>>)` to implement `AppearsOnTable<Join<table, SelectStatement<FromClause<...>>, ...>>`
    = note: required for `Join<table, SelectStatement<FromClause<JoinOn<..., ...>>>, ...>` to implement `QuerySource`
    = note: 1 redundant requirement hidden
    = note: required for `JoinOn<Join<table, SelectStatement<FromClause<...>>, ...>, ...>` to implement `QuerySource`
    = note: required for `SelectStatement<FromClause<users::table>>` to implement `InternalJoinDsl<SelectStatement<FromClause<...>>, ..., ...>`
    = note: 1 redundant requirement hidden
    = note: required for `users::table` to implement `InternalJoinDsl<SelectStatement<FromClause<...>>, ..., ...>`
    = note: required for `users::table` to implement `JoinWithImplicitOnClause<SelectStatement<FromClause<...>>, ...>`
note: required by a bound in `left_join`
   --> DIESEL/diesel/diesel/src/query_dsl/mod.rs
    |
LL |     fn left_join<Rhs>(self, rhs: Rhs) -> LeftJoin<Self, Rhs>
    |        --------- required by a bound in this associated function
LL |     where
LL |         Self: JoinWithImplicitOnClause<Rhs, joins::LeftOuter>,
    |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `QueryDsl::left_join`
 
        = note: this error originates in the macro `table` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0271]: type mismatch resolving `<Join<table, ..., ...> as AppearsInFromClause<...>>::Count == Once`
  --> tests/fail/invalid_joins.rs:72:26
   |
LL |     let _ = users::table.left_join(posts::table.left_join(users::table));
   |                          ^^^^^^^^^ expected `Once`, found `MoreThanOnce`
   |
note: required for `users::columns::id` to implement `AppearsOnTable<Join<table, SelectStatement<FromClause<...>>, ...>>`
  --> tests/fail/invalid_joins.rs:7:9
   |
 LL |         id -> Integer,
   |         ^^
   = note: associated types for the current `impl` cannot be restricted in `where` clauses
   = note: 3 redundant requirements hidden
   = note: required for `Grouped<Eq<Nullable<user_id>, Nullable<id>>>` to implement `AppearsOnTable<Join<table, SelectStatement<FromClause<...>>, ...>>`
   = note: required for `JoinOn<Join<table, SelectStatement<FromClause<...>>, ...>, ...>` to implement `QuerySource`
   = note: required for `SelectStatement<FromClause<users::table>>` to implement `InternalJoinDsl<SelectStatement<FromClause<...>>, ..., ...>`

      = note: this error originates in the macro `table` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0271]: type mismatch resolving `<Once as Plus<Once>>::Output == Once`
   --> tests/fail/invalid_joins.rs:78:20
    |
 LL |         .left_join(posts::table.left_join(users::table.on(posts::user_id.eq(users::id))));
    |          --------- ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `Once`, found `MoreThanOnce`
    |          |
    |          required by a bound introduced by this call
    |
note: required for `users::columns::id` to implement `AppearsOnTable<Join<table, SelectStatement<FromClause<...>>, ...>>`
   --> tests/fail/invalid_joins.rs:7:9
    |
  LL |         id -> Integer,
    |         ^^
    = note: associated types for the current `impl` cannot be restricted in `where` clauses
    = note: 2 redundant requirements hidden
    = note: required for `((id, name), Nullable<SkipSelectableExpressionBoundCheckWrapper<...>>)` to implement `AppearsOnTable<Join<table, SelectStatement<FromClause<...>>, ...>>`
    = note: required for `Join<table, SelectStatement<FromClause<JoinOn<..., ...>>>, ...>` to implement `QuerySource`
    = note: 1 redundant requirement hidden
    = note: required for `JoinOn<Join<table, SelectStatement<FromClause<...>>, ...>, ...>` to implement `QuerySource`
    = note: required for `SelectStatement<FromClause<users::table>>` to implement `InternalJoinDsl<SelectStatement<FromClause<...>>, ..., ...>`
    = note: 1 redundant requirement hidden
    = note: required for `users::table` to implement `InternalJoinDsl<SelectStatement<FromClause<...>>, ..., ...>`
    = note: required for `users::table` to implement `JoinWithImplicitOnClause<SelectStatement<FromClause<...>>, ...>`
note: required by a bound in `left_join`
   --> DIESEL/diesel/diesel/src/query_dsl/mod.rs
    |
LL |     fn left_join<Rhs>(self, rhs: Rhs) -> LeftJoin<Self, Rhs>
    |        --------- required by a bound in this associated function
LL |     where
LL |         Self: JoinWithImplicitOnClause<Rhs, joins::LeftOuter>,
    |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `QueryDsl::left_join`
 
        = note: this error originates in the macro `table` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0271]: type mismatch resolving `<Join<table, ..., ...> as AppearsInFromClause<...>>::Count == Once`
  --> tests/fail/invalid_joins.rs:78:10
   |
LL |         .left_join(posts::table.left_join(users::table.on(posts::user_id.eq(users::id))));
   |          ^^^^^^^^^ expected `Once`, found `MoreThanOnce`
   |
note: required for `users::columns::id` to implement `AppearsOnTable<Join<table, SelectStatement<FromClause<...>>, ...>>`
  --> tests/fail/invalid_joins.rs:7:9
   |
 LL |         id -> Integer,
   |         ^^
   = note: associated types for the current `impl` cannot be restricted in `where` clauses
   = note: 3 redundant requirements hidden
   = note: required for `Grouped<Eq<Nullable<user_id>, Nullable<id>>>` to implement `AppearsOnTable<Join<table, SelectStatement<FromClause<...>>, ...>>`
   = note: required for `JoinOn<Join<table, SelectStatement<FromClause<...>>, ...>, ...>` to implement `QuerySource`
   = note: required for `SelectStatement<FromClause<users::table>>` to implement `InternalJoinDsl<SelectStatement<FromClause<...>>, ..., ...>`

      = note: this error originates in the macro `table` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0271]: type mismatch resolving `<Once as Plus<Once>>::Output == Once`
   --> tests/fail/invalid_joins.rs:85:9
    |
 LL |       let _ = users::table.left_join(
    |                            --------- required by a bound introduced by this call
 LL |
 LL | /         posts::table
 LL | |             .on(users::id.eq(posts::user_id))
 LL | |             .left_join(users::table),
    | |____________________________________^ expected `Once`, found `MoreThanOnce`
    |
note: required for `users::columns::id` to implement `AppearsOnTable<Join<table, SelectStatement<FromClause<...>>, ...>>`
   --> tests/fail/invalid_joins.rs:7:9
    |
  LL |         id -> Integer,
    |         ^^
    = note: associated types for the current `impl` cannot be restricted in `where` clauses
    = note: 2 redundant requirements hidden
    = note: required for `((id, name), Nullable<SkipSelectableExpressionBoundCheckWrapper<...>>)` to implement `AppearsOnTable<Join<table, SelectStatement<FromClause<...>>, ...>>`
    = note: required for `Join<table, SelectStatement<FromClause<JoinOn<..., ...>>>, ...>` to implement `QuerySource`
    = note: 1 redundant requirement hidden
    = note: required for `JoinOn<Join<table, SelectStatement<FromClause<...>>, ...>, ...>` to implement `QuerySource`
    = note: required for `SelectStatement<FromClause<users::table>>` to implement `InternalJoinDsl<SelectStatement<FromClause<...>>, ..., ...>`
    = note: 1 redundant requirement hidden
    = note: required for `users::table` to implement `InternalJoinDsl<SelectStatement<FromClause<...>>, ..., ...>`
    = note: required for `users::table` to implement `JoinWithImplicitOnClause<OnClauseWrapper<..., ...>, ...>`
note: required by a bound in `left_join`
   --> DIESEL/diesel/diesel/src/query_dsl/mod.rs
    |
LL |     fn left_join<Rhs>(self, rhs: Rhs) -> LeftJoin<Self, Rhs>
    |        --------- required by a bound in this associated function
LL |     where
LL |         Self: JoinWithImplicitOnClause<Rhs, joins::LeftOuter>,
    |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `QueryDsl::left_join`
 
        = note: this error originates in the macro `table` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0271]: type mismatch resolving `<Join<table, ..., ...> as AppearsInFromClause<...>>::Count == Once`
  --> tests/fail/invalid_joins.rs:83:26
   |
LL |     let _ = users::table.left_join(
   |                          ^^^^^^^^^ expected `Once`, found `MoreThanOnce`
   |
note: required for `users::columns::id` to implement `AppearsOnTable<Join<table, SelectStatement<FromClause<...>>, ...>>`
  --> tests/fail/invalid_joins.rs:7:9
   |
 LL |         id -> Integer,
   |         ^^
   = note: associated types for the current `impl` cannot be restricted in `where` clauses
   = note: 2 redundant requirements hidden
   = note: required for `Grouped<Eq<id, user_id>>` to implement `AppearsOnTable<Join<table, SelectStatement<FromClause<...>>, ...>>`
   = note: required for `JoinOn<Join<table, SelectStatement<FromClause<...>>, ...>, ...>` to implement `QuerySource`
   = note: required for `SelectStatement<FromClause<users::table>>` to implement `InternalJoinDsl<SelectStatement<FromClause<...>>, ..., ...>`

      = note: this error originates in the macro `table` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0271]: type mismatch resolving `<Once as Plus<Once>>::Output == Once`
   --> tests/fail/invalid_joins.rs:94:20
    |
 LL |         .left_join(posts::table.left_join(comments::table));
    |          --------- ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `Once`, found `MoreThanOnce`
    |          |
    |          required by a bound introduced by this call
    |
note: required for `comments::columns::id` to implement `AppearsOnTable<Join<JoinOn<Join<table, table, ...>, ...>, ..., ...>>`
   --> tests/fail/invalid_joins.rs:22:9
    |
 LL |         id -> Integer,
    |         ^^
    = note: associated types for the current `impl` cannot be restricted in `where` clauses
    = note: 3 redundant requirements hidden
    = note: required for `((id, name), Nullable<(id, user_id, post_id, name)>, Nullable<...>)` to implement `AppearsOnTable<Join<JoinOn<Join<table, table, ...>, ...>, ..., ...>>`
    = note: required for `Join<JoinOn<Join<table, table, LeftOuter>, Grouped<...>>, ..., ...>` to implement `QuerySource`
    = note: 1 redundant requirement hidden
    = note: required for `JoinOn<Join<JoinOn<Join<table, table, LeftOuter>, ...>, ..., ...>, ...>` to implement `QuerySource`
    = note: required for `SelectStatement<FromClause<JoinOn<Join<table, table, LeftOuter>, ...>>>` to implement `InternalJoinDsl<SelectStatement<FromClause<...>>, ..., ...>`
    = note: required for `SelectStatement<FromClause<JoinOn<Join<table, table, LeftOuter>, ...>>>` to implement `JoinWithImplicitOnClause<SelectStatement<FromClause<...>>, ...>`
note: required by a bound in `left_join`
   --> DIESEL/diesel/diesel/src/query_dsl/mod.rs
    |
LL |     fn left_join<Rhs>(self, rhs: Rhs) -> LeftJoin<Self, Rhs>
    |        --------- required by a bound in this associated function
LL |     where
LL |         Self: JoinWithImplicitOnClause<Rhs, joins::LeftOuter>,
    |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `QueryDsl::left_join`
 
        = note: this error originates in the macro `table` (in Nightly builds, run with -Z macro-backtrace for more info)
For more information about this error, try `rustc --explain E0271`.
